# Stock

./: .env.example  .pre-commit-config.yaml  :memory  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yml
app/application/api/: main.py
app/application/api/batch/: handlers.py  schema.py  scheme.py
app/application/exceptions/: base.py
app/domain/aggregats/: allocate.py
app/domain/entities/: batch.py
app/domain/exceptions/: aggregates.py  base.py
app/domain/value_objects/: order_line.py
app/infrastructure/container/: init.py
app/infrastructure/database/: init.py  models.py
app/infrastructure/db/: db
app/infrastructure/exceptions/: base.py  database.py  repository.py
app/infrastructure/logger/: logger.py
app/infrastructure/repository/: base.py  converter.py  init.py  memory.py  orm.py  postgres.py  sqlite.py
app/infrastructure/uow/: base.py  sql.py
app/logic/services/: batch.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/: test_batch_api.py
app/tests/application/api/: conftest.py  test_batch_api.py
app/tests/domain/: test_allocate.py  test_batches.py
app/tests/infrastructure/: test_repository.py
docker_compose/: app.yaml  storage.yaml
